--- a/cookie-recipe.html
+++ b/cookie-recipe.html
@@ -7,9 +7,7 @@
   </head>
 
   <body>
-    <h1>
-      Best Chocolate Chip Cookies
-    </h1>
+    <h1>Best Chocolate Chip Cookies</h1>
     <img src="http://lorempixel.com/400/200/" alt="An image of a cookie" />
 
     <p>
